# NuBot_Rescue_Gazebo

./: CMakeLists.txt  NuBot_Pumbaa_test.launch  Nubot_Pumbaa_test.launch  Nubot_Pummba_test.launch  README.md
gazebo_description/: CMakeLists.txt  package.xml
gazebo_description/models/103-601-field/: 103-601-field.urdf  model.config  model_field.sdf
gazebo_description/models/103-601-field-room/: model.config  model.sdf
gazebo_description/models/103-601-filed-small/: 103-601-filed-small.sdf  103-601-filed-small.urdf  model.config
gazebo_description/models/2022RoboCup_wall/: 2022RoboCup_wall.sdf  model.config
gazebo_description/models/Hokuyo/: model.config  model.sdf
gazebo_description/models/IMU/: model.config  model.sdf  model.urdf.xacro
gazebo_description/models/NuBot_Pumbaa/: model.config  model.sdf  model.sdf.backup
gazebo_description/models/NuBot_Pumbaa_v2/: model.config  model_v2.sdf  model_v2.urdf  model_v2.urdf.xacro  model_v2_lidar.sdf
gazebo_description/models/Nubot_Pumbaa/: model.config  model.sdf
gazebo_description/models/RS_Bpearl/: model.config  model.sdf  model.urdf.xacro  model_2.urdf.xacro
gazebo_description/models/RS_Helios_5515/: model.config  model.sdf  model.urdf.xacro  model_2.urdf.xacro
gazebo_description/models/camera_sensor/: camera_sensor.urdf.xacro  model.config
gazebo_description/models/model-highplate-1_0/: model-highplate-1_0.sdf  model-highplate-1_0.urdf  model.config
gazebo_description/models/model-highplate-1_2/: model-highplate-1_2.sdf  model-highplate-1_2.urdf  model.config
gazebo_description/models/model-ladder/: model-ladder.sdf  model-ladder.urdf  model.config
gazebo_description/models/model-ramps_1/: model-ramps_1.sdf  model-ramps_1.urdf  model.config
gazebo_description/models/model-slope/: model-slope.sdf  model-slope.urdf  model.config
gazebo_description/models/model-stairs/: model-stairs.sdf  model-stairs.urdf  model.config
gazebo_description/models/model-step-600/: model-step-600.sdf  model-step-600.urdf  model.config
gazebo_description/models/model-stepfield/: model-stepfield.sdf  model-stepfield.urdf  model.config
gazebo_description/models/model-stepfield_1/: model-stepfield_1.sdf  model-stepfield_1.urdf  model.config
gazebo_description/models/model-stepfield_2/: model-stepfield_2.sdf  model-stepfield_2.urdf  model.config
gazebo_description/models/plate_obstacle/: model.sdf
gazebo_description/models/stairs_very_simple/: model.config
gazebo_description/models/terrain-15double_slope/: model.config  terrain-15double_slope.sdf
gazebo_description/models/terrain-15single_slope/: model.config  terrain-15single_slope.sdf
gazebo_description/models/terrain-45slope/: model.config  terrain-45slope.sdf
gazebo_description/models/terrain-RandomStep_corner_1/: model.config  terrain-RandomStep_corner_1.sdf
gazebo_description/models/terrain-RandomStep_linear_1/: model.config  terrain-RandomStep_linear_1.sdf
gazebo_description/models/terrain-RandomStep_linear_2/: model.config  terrain-RandomStep_linear_2.sdf
gazebo_description/models/terrain-RandomStep_plate_1/: model.config  terrain-RandomStep_plate_1.sdf
gazebo_description/models/terrain-RandomStep_plate_2/: model.config  terrain-RandomStep_plate_2.sdf
gazebo_description/models/terrain-box/: model.config  model.sdf
gazebo_description/models/terrain-box_20_60_60/: model.config  model.sdf
gazebo_description/models/terrain-cylinder/: model.config  model.sdf
gazebo_description/models/terrain-highplate_100/: model.config  terrain-highplate_100.sdf  terrain-highplate_100.urdf
gazebo_description/models/terrain-highplate_100_long/: model.config  terrain-highplate_100_long.sdf
gazebo_description/models/terrain-highplate_120/: model.config  terrain-highplate_120.sdf
gazebo_description/models/terrain-highplate_1_0/: model.config  terrain-highplate_1_0.sdf  terrain-highplate_1_0.urdf
gazebo_description/models/terrain-highplate_1_2/: model.config  terrain-highplate_1_2.sdf  terrain-highplate_1_2.urdf
gazebo_description/models/terrain-highslope/: model.config  model.sdf
gazebo_description/models/terrain-lab/: model.config  terrain-lab.sdf  terrain-lab.urdf
gazebo_description/models/terrain-lab_room/: model.config  model.sdf
gazebo_description/models/terrain-lab_small/: model.config  terrain-lab_small.sdf  terrain-lab_small.urdf
gazebo_description/models/terrain-ladder/: model.config  terrain-ladder.sdf  (+1 more)
gazebo_description/world/: 2022RoboCup.world  NuBot_Pumbaa_demo.world  NuBot_Pumbaa_labfield.world  NuBot_Pumbaa_test_plate.world  Nubot_Pumbaa_demo.world  Nubot_Pumbaa_test_plate.world  Pumbaa_demo.world  Pumbaa_lab.world  Pumbaa_labfield.world  Pumbaa_lidar_lab.world  Pumbaa_lidar_labfield.world  Pumbaa_plate.world  lab_room.world  labfield.world  paper.world  paper_1.world  planning_test.world  planning_test_phn.world  tracked_vehicle_Pumbaa.world  tracked_vehicle_Pumbaa_1.world  velodyne.world
nubot_launch/: CMakeLists.txt  package.xml
nubot_launch/launch/: empty.launch  joy.launch  pumbaa_2022RoboCup.launch  pumbaa_sdf.launch  pumbaa_xacro.launch  rviz_pumbaa.launch
pumbaa_plugin/: CMakeLists.txt  NuBot_Pumbaa_Gazebo_Plugin.cc  NuBot_Pumbaa_Gazebo_Plugin.hh  package.xml
src/Pummba_Plugin/: CMakeLists.txt  Nubot_Pummba_Gazebo_Plugin.cc  Nubot_Pummba_Gazebo_Plugin.hh  package.xml
(+229 files in other folders)
