<?xml version="1.0"?>
<package>
  <name>nubot_launch</name>
  <version>0.0.0</version>
  <description>
    nubot_launch contains launch files for launching pumbaa_gazebo.
  </description>
  <maintainer email="skywalker1941@163.com">Skywalker1941</maintainer>
  <author email="skywalker1941@163.com">Skywalker1941</author>
  <license>BSD</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_description</run_depend>
  <run_depend>nubot_pumbaa_plugin</run_depend>
  <run_depend>nubot_teleop</run_depend>
  <run_depend>nubot_msgs</run_depend>

  <run_depend>velodyne_simulator</run_depend>
  <run_depend>hector_gazebo</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <!-- <export> -->
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  <!-- </export> -->
</package>
